--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,53 +12,52 @@
 <body>
     <header>
         <div class="contenedor">
-         <div class="contenedor-titulo">
-             <h1>Salario semanal</h1>
-         </div>
+            <div class="contenedor-titulo">
+                <h1>Salario semanal</h1>
+            </div>
         </div>
- </header>
+    </header>
 
- <main>
-    <div class="ingresarHoras">
-        <div class="forms">
-            <form>
-                <label for="horas">Ingrese cantidad de horas </label>
-                <input type="number" id="horas" name="horas">
-                <br><br>
-                <input type="button" value="Calcular">
+    <main>
+        <div class="ingresarHoras">
+            <div class="forms">
+                <form>
+                    <label for="horas">Ingrese cantidad de horas </label>
+                    <input type="number" id="horas" name="horas">
+                    <br><br>
+                    <input type="button" class="button1"  value="Calcular">
 
-                <div class="resultado">
                     <table class="ResultadosTable">
                         <thead>
-                         <tr><th>Valor a pagar</th></tr>   
+                            <tr>
+                                <th>Valor a pagar</th>
+                            </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>Salario semanal</td>
                             </tr>
-                            <tr> 
-                                <td><input name="salarioSemanal" for=""></output></td>
+                            <tr>
+                                <td><input name="salarioSemanal" for=""></input></td>
                             </tr>
                             <tr>
                                 <td>Salario extra</td>
                             </tr>
-                            <tr> 
-                                <td><input name="salarioExtra" for=""></output></td>
+                            <tr>
+                                <td><input name="salarioExtra" for=""></input></td>
                             </tr>
                             <tr>
                                 <td>Total a pagar</td>
                             </tr>
-                            <tr> 
-                                <td><input name="totalaPagar" for=""></output></td>
+                            <tr>
+                                <td><input name="totalaPagar" for=""></input></td>
                             </tr>
                         </tbody>
                     </table>
-                </div>
-
-            </form>
+                </form>
+            </div>
         </div>
-    </div>
- </main>
+    </main>
 </body>
 
 </html>
